# src/models/entity/album.rs
@@ -18,11 +18,12 @@ pub struct AlbumCoverImageReferenceEntity {
     pub title: String,
     pub description: String,
     pub visibility: VisibilityEntity,
-    pub owner_user_id: Uuid,
+    pub album_owner_user_id: Uuid,
     pub image_reference_id: Uuid,
     pub album_created_at: chrono::DateTime<chrono::Utc>,
 
     pub image_id: Uuid,
+    pub image_owner_user_id: Uuid,
     pub url: String,
     pub size: i64,
     pub format: ImageFormatEntity,
@@ -33,14 +34,16 @@ impl From<AlbumCoverImageReferenceEntity> for AlbumEntity {
     fn from(album_cover_image_entity: AlbumCoverImageReferenceEntity) -> Self {
         Self {
             id: album_cover_image_entity.album_id,
-            owner_user_id: album_cover_image_entity.owner_user_id,
+            owner_user_id: album_cover_image_entity.album_owner_user_id,
             title: album_cover_image_entity.title,
             description: album_cover_image_entity.description,
             visibility: album_cover_image_entity.visibility,
             cover_image: ImageReferenceEntity {
                 id: album_cover_image_entity.image_id,
+                owner_user_id: album_cover_image_entity.image_owner_user_id,
                 url: album_cover_image_entity.url,
                 size: album_cover_image_entity.size,
+                visibility: album_cover_image_entity.visibility,
                 format: album_cover_image_entity.format,
                 created_at: album_cover_image_entity.image_created_at,
             },
